<resources>
    <string name="app_name">Submission 1 Android Intermediate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_welcome_sign_in">Welcome back! Glad to see you, Again!</string>
    <string name="label_welcome_register">Hello! Register to get started</string>
    <string name="label_register_now">Don’t have an account? <b><u>Register Now</u></b></string>
    <string name="label_login">Login</string>
    <string name="label_login_with">Or Login with</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_register_with">Or Register with</string>
    <string name="label_register">Register</string>
    <string name="label_login_now">Already have an account? <b><u> Login Now </u></b></string>
    <string name="label_discover_welcome">Discover the best stories by millions of people</string>
    <string name="label_continue_guest">Continue as a guest</string>
    <string name="label_error_fetch_data">Error fetch data</string>
    <string name="label_failed_camera_capture">Failed to take picture.</string>
    <string name="label_success_capture_camera">Photo capture succeeded</string>
    <string name="label_request_camera_permission">Request camera permission</string>
    <string name="label_camera_granted">Camera permission granted</string>
    <string name="label_camera_denied">Camera permission denied</string>
    <string name="label_error_use_case_binding">Use case binding failed</string>
    <string name="label_enter_desc">Enter Description</string>
    <string name="label_upload">Upload</string>
    <string name="label_pick_from_gallery">Pick from gallery</string>
    <string name="label_take_picture">Take picture</string>
    <string name="page_not_available">Page not available</string>
    <string name="error_state_default_text">Something went wrong :(</string>
    <string name="label_reload">Reload</string>
    <string name="menu_logout">Logout</string>
    <string name="label_fab_add_story_content_desc">Floating Action Button to Add Story</string>
    <string name="label_location_not_set">Location Not Set</string>
    <string name="label_my_location">My Location</string>
    <string name="fab_to_add_story_transition">fab_to_add_story</string>
    <string name="label_menu_home">Home</string>
    <string name="label_menu_maps">Maps</string>
    <string name="label_menu_saved_image">Saved</string>
    <string name="label_menu_account">Account</string>
    <string name="label_empty_state_title">Stories are empty</string>
    <string name="label_empty_state_subtitle">Come back later</string>
    <string name="label_press_back_to_exit">Press back again to exit</string>
</resources>