<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_22"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/tv_register"
        style="@style/WelcomeText.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/label_welcome_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.example.submission1androidintermediate.customview.CustomEdiText
        android:id="@+id/etFormEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register" />

    <com.example.submission1androidintermediate.customview.CustomEdiText
        android:id="@+id/etFormPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFormEmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/label_forgot_password"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFormPassword" />

    <TextView
        android:id="@+id/tv_register_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/label_login_with"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="4dp"
        android:background="@color/blackGrey"
        android:foregroundGravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register_with"
        app:layout_constraintEnd_toStartOf="@id/tv_register_with"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_register_with" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:background="@color/blackGrey"
        android:foregroundGravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_register_with"
        app:layout_constraintTop_toTopOf="@id/tv_register_with" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/BaseButton.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:enabled="false"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/label_login"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFormPassword" />

    <TextView
        android:id="@+id/tv_register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/urbanist_regular"
        android:gravity="center_horizontal"
        android:text="@string/label_register_now"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <include
        android:id="@+id/layout_progress_bar"
        layout="@layout/progressbar_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>