<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_22"
    android:background="@drawable/ic__background"
    tools:context=".ui.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/tv_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_discover_welcome"
        style="@style/WelcomeText.Black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/BaseButton.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_14"
        android:text="@string/label_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_discover"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BaseButton.Black"
        android:layout_marginTop="@dimen/margin_14"
        android:text="@string/label_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />
    <TextView
        android:layout_width="match_parent"
        android:fontFamily="@font/urbanist_regular"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size_15"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp"
        android:text="@string/label_continue_guset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>