<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_add_story"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    android:transitionName="fab_to_add"
    android:padding="@dimen/margin_22"
    app:layoutDescription="@xml/fragment_add_story_scene"
    tools:context=".ui.home.stories.AddStoryFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_selector"
        style="@style/BaseFab.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_22"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_image"
        app:backgroundTint="#FF8D8D8C"
        app:layout_constraintBottom_toBottomOf="@id/main_fab"
        app:layout_constraintCircle="@id/main_fab"
        app:layout_constraintCircleAngle="225"
        app:layout_constraintCircleRadius="100dp"
        app:layout_constraintEnd_toEndOf="@id/fab_selector"
        app:layout_constraintStart_toStartOf="@id/fab_selector"
        app:layout_constraintTop_toTopOf="@id/fab_selector"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_pick_from_gallery"
        style="@style/CaptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/label_pick_from_gallery"
        app:layout_constraintEnd_toEndOf="@id/fab_gallery"
        app:layout_constraintStart_toStartOf="@id/fab_gallery"
        app:layout_constraintTop_toBottomOf="@id/fab_gallery" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:backgroundTint="#FF8D8D8C"
        app:layout_constraintBottom_toBottomOf="@id/main_fab"
        app:layout_constraintCircle="@id/main_fab"
        app:layout_constraintCircleAngle="135"
        app:layout_constraintCircleRadius="100dp"
        app:layout_constraintEnd_toEndOf="@id/fab_selector"
        app:layout_constraintStart_toStartOf="@id/fab_selector"
        app:layout_constraintTop_toTopOf="@id/fab_selector"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_take_picture"
        style="@style/CaptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/label_take_picture"
        app:layout_constraintEnd_toEndOf="@id/fab_camera"
        app:layout_constraintStart_toStartOf="@id/fab_camera"
        app:layout_constraintTop_toBottomOf="@id/fab_camera" />

    <include
        android:id="@+id/layout_progress_bar"
        layout="@layout/progressbar_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="524dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_22"
        android:hint="@string/label_enter_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fab_selector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_upload"
        style="@style/BaseButton.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_upload"
        android:layout_marginTop="@dimen/margin_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_desc" />


</androidx.constraintlayout.motion.widget.MotionLayout>